# prdoc

./: Cargo.toml  Dockerfile  README.md  README_src.adoc  justfile  template.prdoc
doc/: authoring.adoc  container.adoc  schema.adoc
doc/cli/: usage.adoc
prdoclib/src/: config.rs  docfile.rs
