[workspace.package]
version = "0.0.8"
authors = ["chevdor <chevdor@gmail.com>"]
edition = "2021"
homepage = "https://github.com/chevdor/prdoc"
keywords = ["cli", "documentation", "parity"]
license = "MIT"
repository = "https://github.com/chevdor/prdoc"

[workspace]
resolver = "2"
members = [
	"cli",
	"prdoclib",
]

[profile.production]
inherits = "release"
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
